--- a/us_project1.ipynb
+++ b/us_project1.ipynb
@@ -12,7 +12,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -86,7 +86,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "2_22Rw7_bG6b"
       },
@@ -111,7 +111,7 @@
         "id": "9o4cJQOBbVT7",
         "outputId": "762f79f7-ae1f-44cb-c2c5-c1f293ce6a76"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -147,7 +147,7 @@
       "metadata": {
         "id": "dqPZF2EbclFJ"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -174,7 +174,7 @@
         "id": "_IHiTbO7c33T",
         "outputId": "3c96585b-a706-4120-bc61-fac152549651"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -656,7 +656,7 @@
         "id": "-2AlFYGtdBek",
         "outputId": "eb68ff9d-fd3f-4c85-871e-03d918b547b7"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -733,7 +733,7 @@
         "id": "EfeHPeoFf667",
         "outputId": "d78f285e-3ac6-4a2d-fb05-beb8d4dfa904"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1064,7 +1064,7 @@
         "id": "Ui7oO6isf7R8",
         "outputId": "a5d97378-1bee-4648-c8da-d453b9a2fa8d"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1100,7 +1100,7 @@
         "id": "LPeNs7aJiCDr",
         "outputId": "bd8b50be-d973-4283-dacc-a92c8cf628e8"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1174,7 +1174,7 @@
         "id": "0JwC8ATeiavg",
         "outputId": "49c4754c-788c-4a5e-e9ab-87214362f1bf"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1221,7 +1221,7 @@
         "id": "nziuuclbjlwI",
         "outputId": "126670c8-a00e-40e3-9a74-323488cb72d2"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1290,7 +1290,7 @@
         "id": "-bR9B2qgipFK",
         "outputId": "5edc9628-d81f-498f-e20d-07f20c0fe137"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1326,7 +1326,7 @@
         "id": "jmMlOx8DkDIT",
         "outputId": "db4d65a0-d457-42cc-ec2c-3a5701bb7faf"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1363,7 +1363,7 @@
         "id": "kVggIhpNlDSX",
         "outputId": "62e17e15-a2dd-460e-db31-10521733fab1"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1410,7 +1410,7 @@
         "id": "q_a0Hs0elLXl",
         "outputId": "c8084e32-84f5-4cdc-8db5-f28e32f7a9ac"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1443,7 +1443,7 @@
       "metadata": {
         "id": "VrLuYGBWn_Oa"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1459,7 +1459,7 @@
         "id": "0gXRr5dWoFpw",
         "outputId": "7cb07f80-18e4-4390-c390-5c70e104ad94"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1495,7 +1495,7 @@
         "id": "3LftLArosnzh",
         "outputId": "bedd9103-6f73-4f8f-d039-ef2b8ae7a640"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1518,7 +1518,7 @@
       "metadata": {
         "id": "7YjUVJ0lux3e"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1534,7 +1534,7 @@
         "id": "wipoy6F2vLQ5",
         "outputId": "96b1f31e-f391-4882-ccea-341b44d49e06"
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1561,7 +1561,7 @@
         "id": "hHl6YkzvwnbB",
         "outputId": "aa140b05-32ae-4577-cbcf-9d12d24e672e"
       },
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1606,7 +1606,7 @@
         "id": "Y09QUta3ww9I",
         "outputId": "80200f46-d8d0-4288-a69c-0ac8acd85056"
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1651,7 +1651,7 @@
         "id": "QqMvGMZqtDJe",
         "outputId": "8d4e00ed-0af0-441e-fa37-0a162a9490a1"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1689,7 +1689,7 @@
         "id": "ViLSoDlix81M",
         "outputId": "c14ba6fc-f554-4b1c-ce96-de7f9f1cdbe5"
       },
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1723,7 +1723,7 @@
       "metadata": {
         "id": "rkwmY8xPyDqK"
       },
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1768,6 +1768,10 @@
     "colab": {
       "name": "us-project1.ipynb",
       "provenance": [],
+      "collapsed_sections": [
+        "WHin0p8jbG6Z",
+        "qP-pc5CHczGU"
+      ],
       "include_colab_link": true
     }
   },
