--- a/us_project1.ipynb
+++ b/us_project1.ipynb
@@ -12,20 +12,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "c4InSrCObG6W",
-        "outputId": "e70cf400-6ffd-4430-a8c6-46afcffab8af"
+        "outputId": "38dd1bc6-bb79-49e8-f48c-313729d8e8c2"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "\u001b[?25l\r\u001b[K     |████▊                           | 10 kB 18.7 MB/s eta 0:00:01\r\u001b[K     |█████████▌                      | 20 kB 11.9 MB/s eta 0:00:01\r\u001b[K     |██████████████▎                 | 30 kB 6.5 MB/s eta 0:00:01\r\u001b[K     |███████████████████             | 40 kB 6.2 MB/s eta 0:00:01\r\u001b[K     |███████████████████████▉        | 51 kB 2.7 MB/s eta 0:00:01\r\u001b[K     |████████████████████████████▋   | 61 kB 3.2 MB/s eta 0:00:01\r\u001b[K     |████████████████████████████████| 68 kB 2.4 MB/s \n",
+            "\u001b[?25l\r\u001b[K     |████▊                           | 10 kB 18.9 MB/s eta 0:00:01\r\u001b[K     |█████████▌                      | 20 kB 16.1 MB/s eta 0:00:01\r\u001b[K     |██████████████▎                 | 30 kB 11.0 MB/s eta 0:00:01\r\u001b[K     |███████████████████             | 40 kB 4.5 MB/s eta 0:00:01\r\u001b[K     |███████████████████████▉        | 51 kB 4.5 MB/s eta 0:00:01\r\u001b[K     |████████████████████████████▋   | 61 kB 5.2 MB/s eta 0:00:01\r\u001b[K     |████████████████████████████████| 68 kB 3.2 MB/s \n",
             "\u001b[?25h  Building wheel for uuid (setup.py) ... \u001b[?25l\u001b[?25hdone\n"
           ]
         }
@@ -45,14 +45,23 @@
         "id": "WHin0p8jbG6Z"
       },
       "source": [
-        "# us-project1\n",
+        "# US-Project1\n",
         "\n",
         "Use the \"Run\" button to execute the code."
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## Loading dataset"
+      ],
+      "metadata": {
+        "id": "JgSw1JY_VlD9"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 2,
       "metadata": {
         "id": "JKewOts3bG6a"
       },
@@ -63,7 +72,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 3,
       "metadata": {
         "id": "lDdW3weabG6b"
       },
@@ -74,11 +83,41 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
-        "id": "FVH2K5mZbG6b"
+        "id": "FVH2K5mZbG6b",
+        "outputId": "b40c8f24-f6e1-48e5-e6d4-b1de1346284b",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 122
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[jovian] Detected Colab notebook...\u001b[0m\n",
+            "[jovian] Please enter your API key ( from https://jovian.ai/ ):\u001b[0m\n",
+            "API KEY: ··········\n",
+            "[jovian] Uploading colab notebook to Jovian...\u001b[0m\n",
+            "Committed successfully! https://jovian.ai/pranaysharma2230/us-project1\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'https://jovian.ai/pranaysharma2230/us-project1'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 4
+        }
+      ],
       "source": [
         "# Execute this to save new versions of the notebook\n",
         "jovian.commit(project=\"us-project1\")"
@@ -86,7 +125,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 5,
       "metadata": {
         "id": "2_22Rw7_bG6b"
       },
@@ -109,9 +148,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "9o4cJQOBbVT7",
-        "outputId": "638ad93b-acf8-4a8c-b300-f71d345e77c2"
+        "outputId": "86ede111-96fb-437f-ee3f-7c54cb124df3"
       },
-      "execution_count": 11,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -127,7 +166,7 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "100%|██████████| 269M/269M [00:01<00:00, 176MB/s]\n"
+            "100%|██████████| 269M/269M [00:01<00:00, 242MB/s]\n"
           ]
         },
         {
@@ -147,13 +186,13 @@
       "metadata": {
         "id": "dqPZF2EbclFJ"
       },
-      "execution_count": 12,
+      "execution_count": 8,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
-        "# Data Preparation and Cleaning"
+        "## Data Preparation and Cleaning"
       ],
       "metadata": {
         "id": "qP-pc5CHczGU"
@@ -172,9 +211,9 @@
           "height": 939
         },
         "id": "_IHiTbO7c33T",
-        "outputId": "b68d13ce-46c3-4d73-b807-c000be83b162"
+        "outputId": "5dad747a-f98a-4170-e948-6f8cadfb4f2b"
       },
-      "execution_count": 13,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -249,7 +288,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-3cac77f4-d755-4ede-95eb-c119fcbfd678\">\n",
+              "  <div id=\"df-87c58b4c-8649-43bf-923e-24e598197161\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -561,7 +600,7 @@
               "</table>\n",
               "<p>2845342 rows × 47 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-3cac77f4-d755-4ede-95eb-c119fcbfd678')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-87c58b4c-8649-43bf-923e-24e598197161')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -612,12 +651,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-3cac77f4-d755-4ede-95eb-c119fcbfd678 button.colab-df-convert');\n",
+              "          document.querySelector('#df-87c58b4c-8649-43bf-923e-24e598197161 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-3cac77f4-d755-4ede-95eb-c119fcbfd678');\n",
+              "          const element = document.querySelector('#df-87c58b4c-8649-43bf-923e-24e598197161');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -640,7 +679,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 13
+          "execution_count": 9
         }
       ]
     },
@@ -1203,7 +1242,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Exploratory Analysis"
+        "## Exploratory Analysis"
       ],
       "metadata": {
         "id": "7Z4uLTD4ik_6"
@@ -1251,9 +1290,7 @@
         "Columns to Analyze:\n",
         "1.City\n",
         "2.Start Time\n",
-        "3.Start Lat, Start Lng\n",
-        "4.Temperature\n",
-        "5.Weather Condition\n"
+        "3.Start Lat, Start Lng\n"
       ],
       "metadata": {
         "id": "rJcH3HxyjSzA"
@@ -1262,7 +1299,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## City"
+        "### City"
       ],
       "metadata": {
         "id": "yKnjRoMjjsGM"
@@ -1443,7 +1480,7 @@
       "metadata": {
         "id": "VrLuYGBWn_Oa"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1633,7 +1670,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Start Time"
+        "### Start Time"
       ],
       "metadata": {
         "id": "edovBkE-tAVV"
@@ -1688,7 +1725,7 @@
         "id": "ViLSoDlix81M",
         "outputId": "f7d1b19f-e1e5-4463-d5e8-a306179f8ffb"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1719,7 +1756,7 @@
       "metadata": {
         "id": "rkwmY8xPyDqK"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1744,7 +1781,7 @@
         "id": "TdY-GmmvI6n0",
         "outputId": "90054b97-9aba-4e3b-dd31-6ae6aa5f9f75"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1807,7 +1844,7 @@
         "id": "TaaxZ_RuLx3A",
         "outputId": "7c878fc2-3f61-4c45-88cc-a9f33eaaa7c9"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1862,7 +1899,7 @@
         "id": "FtbdWeOwMDCP",
         "outputId": "9423316f-d086-4bf5-d4c3-e846e4321af4"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1908,7 +1945,7 @@
         "id": "TJqhUq2DMFIZ",
         "outputId": "9916a730-78bd-4b8b-a13f-cdab84ab721a"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1972,7 +2009,7 @@
         "id": "LEtpMmHTNIbn",
         "outputId": "d55be962-fa7c-40ef-fbfb-182a59aa8d80"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2025,7 +2062,7 @@
         "id": "lps6-bDKSSsb",
         "outputId": "39779892-1bde-4082-c47e-e29a2d01b082"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2062,7 +2099,7 @@
         "id": "0yAjR8EzSEqy",
         "outputId": "a2e1cf9e-d265-43ab-c247-5e1b354f48d6"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2100,7 +2137,7 @@
         "id": "nYMY8UgKSoBc",
         "outputId": "d3e7b1cc-d7d4-4968-8f86-f7af33a6ca7a"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2141,7 +2178,7 @@
       "metadata": {
         "id": "pB9i0jdUTnKw"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2157,7 +2194,7 @@
         "id": "IDIoPG82T9GS",
         "outputId": "c31b506a-f28e-4629-fc74-bb54beddcd92"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2184,7 +2221,7 @@
         "id": "Y0HpPZipUDjK",
         "outputId": "ea026e7e-61e0-46fa-a56b-f588930a820d"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2230,7 +2267,7 @@
         "id": "Y7e0WhsJVE5w",
         "outputId": "0ff4dd30-eaf5-4d50-d5e4-16f9ed4e56fa"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2252,7 +2289,7 @@
       "metadata": {
         "id": "adN848JbVI3d"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2264,7 +2301,7 @@
       "metadata": {
         "id": "9JtJ-Bb2VMns"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2282,7 +2319,7 @@
         "id": "hdF4HZjiVS08",
         "outputId": "3ae0e004-2c32-4e64-c0fb-56e93bc99c86"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2367,6 +2404,28 @@
           "execution_count": 42
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Summary and Insights"
+      ],
+      "metadata": {
+        "id": "9YPldCLlRWIZ"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "1. Miami has the highsest number of accidents.\n",
+        "2. Only 4.24% cities of the total cities have more than 1000 accidents.\n",
+        "3. Large number of accidents take place betwwen 3 p.m to 6 p.m .\n",
+        "4. The distribution of accidents is different on weekdays and weekends.\n",
+        "5. The density of occurance of accidents is relatively lower in the central part of US."
+      ],
+      "metadata": {
+        "id": "Ca11NUxbRdKw"
+      }
     }
   ],
   "metadata": {
